Adding glance widget :)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="navigate_to_product_list">Navigate to Product List</string>
     <string name="message">Message</string>
     <string name="message_placeholder">Start typing…</string>
+    <string name="bojack_horseman">Bojack Horseman</string>
 </resources>
